# tram

./: .gitignore  .prototools  CLAUDE.md  CRATES.md  Cargo.toml  Justfile  LICENSE  README.md  ROADMAP.md  build.rs  moon.yml  tram.toml
.claude/: README.md  settings.json
.claude/commands/arch/: extract-common.md  refactor-to-pattern.md
.claude/commands/codegen/: add-example.md  new-crate.md  pattern.md
.claude/commands/docs/: generate-api-docs.md  roadmap-update.md  sync-docs.md
.claude/commands/meta/: compare-starter-kits.md  implement-phase.md  tram-status.md
.claude/commands/perf/: bench-startup.md  size-report.md
.claude/commands/release/: check-deps.md  prepare-release.md
.claude/commands/testing/: check-consistency.md  test-integration.md  validate-examples.md
.claude/hooks/: bash-cargo-check.py  rust-check.py
.github/workflows/: ci.yml  release.yml
.moon/: workspace.yml
crates/tram-config/: Cargo.toml  README.md  moon.yml
crates/tram-config/src/: lib.rs
crates/tram-core/: Cargo.toml  README.md  moon.yml
crates/tram-core/src/: error.rs  lib.rs  logging.rs  project_init.rs  template_gen.rs
crates/tram-core/src/templates/: command.hbs  config_section.hbs  error_type.hbs  session_extension.hbs
crates/tram-test/: Cargo.toml
crates/tram-test/src/: assertions.rs  cli.rs  fixtures.rs  lib.rs  mocks.rs
crates/tram-workspace/: Cargo.toml  moon.yml
crates/tram-workspace/src/: lib.rs
docs/: phase-2-implementation-plan.md
examples/: README.md  async_operations.rs  basic_command.rs  config_usage.rs  file_operations.rs  interactive_prompts.rs  progress_indicators.rs
src/: cli.rs  commands.rs  dev_tools.rs  examples.rs  main.rs  session.rs  utils.rs
tests/: cli_integration_test.rs  completions_integration_test.rs  man_pages_integration_test.rs
tests/common/: mod.rs
