[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
# DO NOT CHANGE THE EDITION!!! 2024 is the correct edition!
edition = "2024"
license = "MIT"
homepage = "https://github.com/moonrepo/tram"
repository = "https://github.com/moonrepo/tram"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# CLI parsing
clap = { version = "4.0", features = ["derive", "env"] }

# Error handling
thiserror = "1.0"
miette = { version = "7.0", features = ["fancy"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# File system utilities
glob = "0.3"
walkdir = "2.0"
notify = "6.0"

# Templating
handlebars = "6.3.2"

# Configuration management  
schematic = { version = "0.18", features = ["config", "env", "json", "toml", "yaml"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Date and time utilities (for examples)
chrono = { version = "0.4", features = ["serde"] }

# Interactive prompts (for examples)
dialoguer = "0.11"

# Checksums and hashing (for examples)
md5 = "0.7"

# Starbase dependencies (will be added as regular dependencies)
starbase = "0.10"
starbase_console = "0.2"
starbase_utils = "0.8"

# Development dependencies
[workspace.dependencies.tempfile]
version = "3.0"

[workspace.dependencies.tokio-test]
version = "0.4"

# Root binary package
[package]
name = "tram"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "tram"
path = "src/main.rs"

# Example binaries
[[example]]
name = "basic_command"
path = "examples/basic_command.rs"

[[example]]
name = "async_operations"
path = "examples/async_operations.rs"

[[example]]
name = "config_usage"
path = "examples/config_usage.rs"

[[example]]
name = "progress_indicators"
path = "examples/progress_indicators.rs"

[[example]]
name = "interactive_prompts"
path = "examples/interactive_prompts.rs"

[[example]]
name = "file_operations"
path = "examples/file_operations.rs"

[dependencies]
tram-core = { path = "crates/tram-core" }
tram-config = { path = "crates/tram-config" }
tram-workspace = { path = "crates/tram-workspace" }

clap.workspace = true
tokio.workspace = true
miette.workspace = true
async-trait.workspace = true
starbase.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
schematic.workspace = true
notify.workspace = true

# Example dependencies
chrono.workspace = true
dialoguer.workspace = true
md5.workspace = true
walkdir.workspace = true
glob.workspace = true
