[package]
name = "tram-config"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Configuration management and validation for Tram CLI applications"

[dependencies]
# Core dependencies
tram-core = { path = "../tram-core" }

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true
miette.workspace = true

# CLI parsing
clap.workspace = true

# File system
starbase_utils.workspace = true

