[package]
name = "tram-config"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Configuration management and validation for Tram CLI applications"

[dependencies]
# Core dependencies
tram-core = { path = "../tram-core" }

# Configuration management
schematic.workspace = true

# Serialization (for compatibility)
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
miette.workspace = true

# CLI parsing
clap.workspace = true

# File system
starbase_utils.workspace = true
notify.workspace = true

# Async runtime (for config watching)
tokio.workspace = true
async-trait.workspace = true

# Logging and tracing
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
serial_test = "3.0"

