[package]
name = "tram-core"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Core integration layer between clap and starbase for Tram CLI applications"

[dependencies]
# Core async support
tokio.workspace = true
async-trait.workspace = true

# CLI parsing
clap.workspace = true

# Error handling
thiserror.workspace = true
miette.workspace = true

# Starbase integration
starbase.workspace = true

# Configuration support
serde.workspace = true