[package]
name = "tram-test"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Testing utilities and fixtures for Tram CLI applications"

[dependencies]
# Core dependencies
tokio.workspace = true
async-trait.workspace = true
miette.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Testing dependencies
tempfile.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true

# CLI and process testing
clap.workspace = true
starbase.workspace = true

# File system utilities
glob.workspace = true
walkdir.workspace = true

# Tram crates
tram-core = { path = "../tram-core" }
tram-config = { path = "../tram-config" }
tram-workspace = { path = "../tram-workspace" }

[dev-dependencies]
tokio-test.workspace = true
